--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -65,11 +65,11 @@ html {
 }
 
 .color-primary {
-  color: $color_2;
+  color: white;
 }
 
 .color-terciary {
-  color: $color_4;
+  color: white;
 }
 
 //SECCION PARA EL MENU
@@ -641,7 +641,7 @@ select option {
 
 h1 {
   font-family: 'Oswald', sans-serif;
-  font-size: 40px;
+  font-size: 50px;
   font-weight: bold;
   padding: 5px 0;
   opacity:0;  /* make things invisible upon start */
@@ -653,17 +653,19 @@ h1 {
   -webkit-animation-duration:2s;
   -moz-animation-duration:2s;
   animation-duration:2s;
+  text-align: left;
   @media (min-width: 800px){
-    font-size: 80px;
+    font-size: 70px;
 }
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 31px;
   font-family: 'Oswald', sans-serif;
   padding: 10px 0;
-  color: darkgoldenrod;
+  color: white;
   font-variant: all-small-caps;
+  text-align: left;
   opacity:0;  /* make things invisible upon start */
   -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
   -moz-animation:fadeIn ease-in 1;
@@ -673,12 +675,24 @@ h3 {
   -webkit-animation-duration:2s;
   -moz-animation-duration:2s;
   animation-duration:2s;
+  @media (max-width: 600px){
+  text-justify: inter-word;
+  font-size: 25px;
+  }
+
 }
 
 h5 {
+  text-align: left;
   font-family: 'Oswald', sans-serif;
   font-size: 24px;
   font-weight: bold;
+  margin-bottom: 5px;
+  color: #222222;
+  @media (max-width: 360px){
+    font-size: 20px;
+  }
+
 }
 
 strong {
@@ -693,7 +707,7 @@ strong {
 }
 
 .container-menu-margin {
-  margin-top: 50px;
+  margin-top: -2px;
   @media (min-width: 800px) {
     margin-top: 0;
   }
@@ -701,12 +715,30 @@ strong {
 
 .container-color {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eaefb5+0,e1e9a0+100;Wax+Flat */
-  background: rgb(234,239,181); /* Old browsers */
-  background: -moz-linear-gradient(-45deg,  rgba(234,239,181,1) 0%, rgba(225,233,160,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg,  rgba(234,239,181,1) 0%,rgba(225,233,160,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg,  rgba(234,239,181,1) 0%,rgba(225,233,160,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaefb5', endColorstr='#e1e9a0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  //background: rgb(234,239,181); /* Old browsers */
+  //background: -moz-linear-gradient(-45deg,  rgba(234,239,181,1) 0%, rgba(225,233,160,1) 100%); /* FF3.6-15 */
+  //background: -webkit-linear-gradient(-45deg,  rgba(234,239,181,1) 0%,rgba(225,233,160,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  //background: linear-gradient(135deg,  rgba(234,239,181,1) 0%,rgba(225,233,160,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaefb5', endColorstr='#e1e9a0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background-color: lightgrey;
+  background-image: linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
+  linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
+  linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
+  linear-gradient(90deg, transparent 50%, rgba(255,255,255,.29) 50%);
+  background-size: 43px, 59px, 67px, 83px;
+}
 
+.example {
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.35) 73%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0)), color-stop(73%,rgba(0,0,0,0.35)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 73%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 73%,rgba(0,0,0,0.65) 100%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 73%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+  background: radial-gradient(ellipse at center,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 73%,rgba(0,0,0,0.65) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
 
 
@@ -734,6 +766,7 @@ strong {
   -webkit-animation-duration:2.7s;
   -moz-animation-duration:2.7s;
   animation-duration:2.7s;
+  text-align: left;
 
 
 }
@@ -805,7 +838,7 @@ strong {
   height: 0;
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
-  border-bottom: 15px solid $color_4;
+  border-bottom: 15px solid white;
 }
 
 .arrow-down {
@@ -813,7 +846,7 @@ strong {
   height: 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 15px solid #f00;
+  border-top: 15px solid white;
 }
 
 .arrow-right {
@@ -830,12 +863,34 @@ strong {
   height: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 15px solid $color_2;
+  border-right: 15px solid white;
+
+}
+
+.arrow-left:hover,
+.arrow-right:hover{
+  border-right: 15px solid darkorange;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+}
+
+.arrow-up:hover{
+  border-bottom: 15px solid darkorange;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
 }
 
 .back {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   //margin-right: 15%;
   //margin-top: 30px;
@@ -998,6 +1053,8 @@ label {
 .noticia-info > p,a, .show-noticia-info > p {
   font-size: 16px;
   font-family: 'Oswald', sans-serif;
+  text-align: left;
+  margin-top: 5px;
 }
 
 
@@ -1437,6 +1494,7 @@ label {
 }
 
 button {
+  font-family: 'Oswald', sans-serif;
   border: none;
   background-color: transparent;
   font-weight: bold;
@@ -1500,7 +1558,7 @@ button:hover{
 .arrow-chat-margin{
   margin-right:0;
   @media (min-width: 800px) {
-    margin-right:15px;
+    margin-right:10px;
   }
 }
 .controls-margin{
@@ -1517,19 +1575,24 @@ button:hover{
 
 }
 .container-color-1{
-  background: #eaefb5;
-  background: -moz-linear-gradient(-45deg, #eaefb5 0%, #e1e9a0 100%);
-  background: -webkit-linear-gradient(-45deg, #eaefb5 0%, #e1e9a0 100%);
-  background: linear-gradient(135deg, #eaefb5 0%, #e1e9a0 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaefb5', endColorstr='#e1e9a0',GradientType=1 );
+  background: rgba(255,255,255,1);
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(161,204,165,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(161,204,165,1)));
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(161,204,165,1) 100%);
+  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(161,204,165,1) 100%);
+  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(161,204,165,1) 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(161,204,165,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#a1cca5', GradientType=0 );
 }
 .container-color-2{
-  background-image: -webkit-linear-gradient(top,#f2dede 0,#e7c3c3 100%);
-  background-image: -o-linear-gradient(top,#f2dede 0,#e7c3c3 100%);
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#f2dede),to(#e7c3c3));
-  background-image: linear-gradient(to bottom,#f2dede 0,#e7c3c3 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff2dede', endColorstr='#ffe7c3c3', GradientType=1);
-  background-repeat: repeat-x;
+  background: rgba(241,231,103,1);
+  background: -moz-linear-gradient(top, rgba(241,231,103,1) 0%, rgba(251,224,131,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(241,231,103,1)), color-stop(100%, rgba(251,224,131,1)));
+  background: -webkit-linear-gradient(top, rgba(241,231,103,1) 0%, rgba(251,224,131,1) 100%);
+  background: -o-linear-gradient(top, rgba(241,231,103,1) 0%, rgba(251,224,131,1) 100%);
+  background: -ms-linear-gradient(top, rgba(241,231,103,1) 0%, rgba(251,224,131,1) 100%);
+  background: linear-gradient(to bottom, rgba(241,231,103,1) 0%, rgba(251,224,131,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#fbe083', GradientType=0 );
 }
 .container-color-3{
   background-image: -webkit-linear-gradient(top,#dff0d8 0,#c8e5bc 100%);
@@ -1540,12 +1603,14 @@ button:hover{
   background-repeat: repeat-x;
 }
 .container-color-4{
-  background-image: -webkit-linear-gradient(top,#d9edf7 0,#b9def0 100%);
-  background-image: -o-linear-gradient(top,#d9edf7 0,#b9def0 100%);
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#d9edf7),to(#b9def0));
-  background-image: linear-gradient(to bottom,#d9edf7 0,#b9def0 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9edf7', endColorstr='#ffb9def0', GradientType=1);
-  background-repeat: repeat-x;
+  background: rgba(255,255,255,1);
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
 }
 .container-color-5{
   background-image: -webkit-linear-gradient(top,#fcf8e3 0,#f8efc0 100%);
@@ -1556,11 +1621,14 @@ button:hover{
   background-repeat: repeat-x;
 }
 .container-color-6{
-  background: #eaefb5;
-  background: -moz-linear-gradient(-45deg, #eaefb5 0%, #e1e9a0 100%);
-  background: -webkit-linear-gradient(-45deg, #eaefb5 0%, #e1e9a0 100%);
-  background: linear-gradient(135deg, #eaefb5 0%, #e1e9a0 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaefb5', endColorstr='#e1e9a0',GradientType=1 );
+  background: rgba(147,206,222,1);
+  background: -moz-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(147,206,222,1)), color-stop(41%, rgba(117,189,209,1)), color-stop(100%, rgba(73,165,191,1)));
+  background: -webkit-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+  background: -o-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+  background: -ms-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+  background: linear-gradient(to bottom, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf', GradientType=0 );
 }
 
 .btn {
