--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -936,7 +936,7 @@ input[type="date"],
 textarea {
   border: solid 0px;
   border-bottom-width: 1px;
-  border-bottom-color: $color_6;
+  border-bottom-color: white;
   background-color: transparent;
   margin-left: 5px;
   //margin: 0 0 10px;
@@ -1008,12 +1008,15 @@ label {
 
 .show-noticia-foto {
   margin: 30px 0 20px;
+  height: 400px;
+  width: 100%;
+  overflow: hidden;
 }
 
+
 .noticia-foto > img {
-  height: 100px;
   width: 100%;
-  border: 1px solid $color_6;
+  border: 3px solid $color_6;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
@@ -1024,7 +1027,6 @@ label {
 }
 
 .show-noticia-foto > img {
-  height: 200px;
   width: 100%;
   border: 1px solid $color_6;
   -webkit-border-radius: 20px;
@@ -1630,27 +1632,30 @@ button:hover{
   background: linear-gradient(to bottom, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf', GradientType=0 );
 }
-
 .btn {
-  width: 100%;
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
+  font-weight: lighter;
+  color: white;
+    width: 100%;
   padding: 5px 0;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.2);
   -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 1px rgba(0,0,0,.075);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 1px rgba(0,0,0,.075);
   @media (min-width: 800px) {
-    width: 25%;
+    width: 100px;
   }
 }
 .btn-default {
-  background-image: -webkit-linear-gradient(top,#5bc0de 0,#2aabd2 100%);
-  background-image: -o-linear-gradient(top,#5bc0de 0,#2aabd2 100%);
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#5bc0de),to(#2aabd2));
-  background-image: linear-gradient(to bottom,#5bc0de 0,#2aabd2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2aabd2', GradientType=0);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-  background-repeat: repeat-x;
-  border-color: #28a4c9;
-}
+   background: rgba(179,220,237,1);
+   background: -moz-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+   background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(179,220,237,1)), color-stop(50%, rgba(41,184,229,1)), color-stop(100%, rgba(188,224,238,1)));
+   background: -webkit-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+   background: -o-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+   background: -ms-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
+  background: linear-gradient(to bottom, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);order-color: white;
+ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', endColorstr='#bce0ee', GradientType=0 );
+   }
+
 .noticia-detalle {
   height: 250px;
   overflow: auto;
