--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1063,7 +1063,9 @@ border-radius: 20px;
 
 
 .buscar {
-  margin-top: 10px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 .buscar-control {
