--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -1089,10 +1089,12 @@ border-radius: 20px;
 
 /* line 1065, ../sass/screen.scss */
 .buscar {
-  margin-top: 10px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
 
-/* line 1069, ../sass/screen.scss */
+/* line 1071, ../sass/screen.scss */
 .buscar-control {
   width: 89%;
   background-image: none;
@@ -1101,25 +1103,25 @@ border-radius: 20px;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-/* line 1077, ../sass/screen.scss */
+/* line 1079, ../sass/screen.scss */
 .arrow-contacto {
   display: none;
 }
 
-/* line 1081, ../sass/screen.scss */
+/* line 1083, ../sass/screen.scss */
 .contacto-controls {
   width: 100%;
 }
 
 @media (min-width: 800px) {
-  /* line 1086, ../sass/screen.scss */
+  /* line 1088, ../sass/screen.scss */
   .contacto-container {
     flex-direction: column;
     display: flex;
     width: 80%;
   }
 
-  /* line 1092, ../sass/screen.scss */
+  /* line 1094, ../sass/screen.scss */
   .arrow-contacto {
     border-left: 1px solid #000;
     margin-right: 5%;
@@ -1128,14 +1130,14 @@ border-radius: 20px;
     margin-left: 10%;
   }
 
-  /* line 1099, ../sass/screen.scss */
+  /* line 1101, ../sass/screen.scss */
   .contacto-controls {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
   }
 
-  /* line 1105, ../sass/screen.scss */
+  /* line 1107, ../sass/screen.scss */
   .contacto-controls > .controls {
     width: 100%;
     display: flex;
@@ -1143,20 +1145,20 @@ border-radius: 20px;
     justify-content: flex-end;
   }
 
-  /* line 1111, ../sass/screen.scss */
+  /* line 1113, ../sass/screen.scss */
   .contacto-controls > .controls > .form-control {
     display: inline;
     width: 60%;
   }
 
-  /* line 1115, ../sass/screen.scss */
+  /* line 1117, ../sass/screen.scss */
   .message-controls {
     width: 100%;
     display: flex;
     justify-content: flex-start;
   }
 }
-/* line 1123, ../sass/screen.scss */
+/* line 1125, ../sass/screen.scss */
 .sabias-slider {
   display: flex;
   flex-direction: column;
@@ -1164,7 +1166,7 @@ border-radius: 20px;
   width: 100%;
 }
 
-/* line 1132, ../sass/screen.scss */
+/* line 1134, ../sass/screen.scss */
 .sabias-container {
   height: 300px;
   width: 350px;
@@ -1174,13 +1176,13 @@ border-radius: 20px;
   border-radius: 20px;
 }
 @media (min-width: 800px) {
-  /* line 1132, ../sass/screen.scss */
+  /* line 1134, ../sass/screen.scss */
   .sabias-container {
     width: 800px;
   }
 }
 
-/* line 1144, ../sass/screen.scss */
+/* line 1146, ../sass/screen.scss */
 .sabias-container-2 {
   height: 278px;
   width: 328px;
@@ -1191,20 +1193,20 @@ border-radius: 20px;
   margin: 10px;
 }
 @media (min-width: 800px) {
-  /* line 1144, ../sass/screen.scss */
+  /* line 1146, ../sass/screen.scss */
   .sabias-container-2 {
     width: 780px;
   }
 }
 
-/* line 1157, ../sass/screen.scss */
+/* line 1159, ../sass/screen.scss */
 .slider-indicator {
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
-/* line 1163, ../sass/screen.scss */
+/* line 1165, ../sass/screen.scss */
 .slider_1, .slider_2, .slider_3, .slider_4, .slider_5 {
   border: 1px solid #333;
   border-radius: 10px;
@@ -1214,7 +1216,7 @@ border-radius: 20px;
   margin: 10px;
 }
 
-/* line 1172, ../sass/screen.scss */
+/* line 1174, ../sass/screen.scss */
 .slider_selected {
   background-color: black;
   border: 1px solid #fff;
@@ -1224,7 +1226,7 @@ border-radius: 20px;
   -o-transition: all .3s;
 }
 
-/* line 1183, ../sass/screen.scss */
+/* line 1185, ../sass/screen.scss */
 .footer {
   font-family: Arial, serif;
   font-size: 16px;
@@ -1236,7 +1238,7 @@ border-radius: 20px;
   height: 160px;
 }
 @media (min-width: 800px) {
-  /* line 1183, ../sass/screen.scss */
+  /* line 1185, ../sass/screen.scss */
   .footer {
     position: relative;
     bottom: 0;
@@ -1245,19 +1247,19 @@ border-radius: 20px;
   }
 }
 
-/* line 1201, ../sass/screen.scss */
+/* line 1203, ../sass/screen.scss */
 .footer > p {
   margin: 35px 50px;
   text-align: center;
 }
 @media (min-width: 800px) {
-  /* line 1201, ../sass/screen.scss */
+  /* line 1203, ../sass/screen.scss */
   .footer > p {
     margin: 10px 0;
   }
 }
 
-/* line 1209, ../sass/screen.scss */
+/* line 1211, ../sass/screen.scss */
 .footer > p > a {
   text-decoration: none;
   color: #ce5f2d;
@@ -1457,12 +1459,12 @@ label {
 }
 
 */
-/* line 1411, ../sass/screen.scss */
+/* line 1413, ../sass/screen.scss */
 #main-slider {
   height: 370px;
   position: relative;
 }
-/* line 1417, ../sass/screen.scss */
+/* line 1419, ../sass/screen.scss */
 #main-slider h1 {
   color: black;
   font-family: 'Oswald', sans-serif;
@@ -1472,7 +1474,7 @@ label {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1426, ../sass/screen.scss */
+/* line 1428, ../sass/screen.scss */
 #main-slider p {
   font-family: 'Oswald', sans-serif;
   font-size: 17px;
@@ -1480,17 +1482,17 @@ label {
   overflow: hidden;
 }
 @media (min-width: 800px) {
-  /* line 1426, ../sass/screen.scss */
+  /* line 1428, ../sass/screen.scss */
   #main-slider p {
     font-size: 16px;
   }
 }
-/* line 1437, ../sass/screen.scss */
+/* line 1439, ../sass/screen.scss */
 #main-slider img {
   vertical-align: middle;
   text-align: center;
 }
-/* line 1444, ../sass/screen.scss */
+/* line 1446, ../sass/screen.scss */
 #main-slider .button-ver {
   width: 54px;
   height: 32px;
@@ -1511,12 +1513,12 @@ label {
   -o-transition: all .3s;
   transition: all .3s;
 }
-/* line 1466, ../sass/screen.scss */
+/* line 1468, ../sass/screen.scss */
 #main-slider .button-ver:hover {
   cursor: pointer;
   background-color: orange;
 }
-/* line 1478, ../sass/screen.scss */
+/* line 1480, ../sass/screen.scss */
 #main-slider .main-slider-proyecto {
   opacity: 0;
   position: absolute;
@@ -1532,14 +1534,14 @@ label {
   transition: all 0.4s;
 }
 
-/* line 1503, ../sass/screen.scss */
+/* line 1505, ../sass/screen.scss */
 .show-slider-proyecto {
   opacity: 1 !important;
   z-index: 10 !important;
   pointer-events: all !important;
 }
 
-/* line 1510, ../sass/screen.scss */
+/* line 1512, ../sass/screen.scss */
 button {
   font-family: 'Oswald', sans-serif;
   border: none;
@@ -1548,12 +1550,12 @@ button {
   cursor: pointer;
 }
 
-/* line 1517, ../sass/screen.scss */
+/* line 1519, ../sass/screen.scss */
 button:hover {
   color: #ce5f2d;
 }
 
-/* line 1520, ../sass/screen.scss */
+/* line 1522, ../sass/screen.scss */
 .ac-mensaje-custom-show {
   background-color: #a1cca5;
   text-align: center;
@@ -1568,33 +1570,33 @@ button:hover {
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
 }
 
-/* line 1533, ../sass/screen.scss */
+/* line 1535, ../sass/screen.scss */
 #message-chat {
   height: 350px;
   overflow-y: auto;
   border-right: 1px solid;
 }
 
-/* line 1539, ../sass/screen.scss */
+/* line 1541, ../sass/screen.scss */
 .chat-container {
   flex-direction: column;
   display: flex;
   width: 100%;
 }
 @media (min-width: 800px) {
-  /* line 1539, ../sass/screen.scss */
+  /* line 1541, ../sass/screen.scss */
   .chat-container {
     width: 80%;
   }
 }
 
-/* line 1547, ../sass/screen.scss */
+/* line 1549, ../sass/screen.scss */
 .chat-container-login, .contacto-container-controls {
   flex-direction: row;
   display: flex;
 }
 
-/* line 1551, ../sass/screen.scss */
+/* line 1553, ../sass/screen.scss */
 .btn-chat {
   display: flex;
   flex-direction: column;
@@ -1604,47 +1606,47 @@ button:hover {
   font-family: 'Oswald', sans-serif;
 }
 @media (min-width: 800px) {
-  /* line 1551, ../sass/screen.scss */
+  /* line 1553, ../sass/screen.scss */
   .btn-chat {
     align-items: flex-end;
   }
 }
 
-/* line 1562, ../sass/screen.scss */
+/* line 1564, ../sass/screen.scss */
 #texto-mensaje {
   width: 60%;
   margin-left: 25%;
   margin-top: 15px;
 }
 
-/* line 1567, ../sass/screen.scss */
+/* line 1569, ../sass/screen.scss */
 .arrow-contacto-margin {
   margin-right: 0;
 }
 @media (min-width: 800px) {
-  /* line 1567, ../sass/screen.scss */
+  /* line 1569, ../sass/screen.scss */
   .arrow-contacto-margin {
     margin-right: 10px;
   }
 }
 
-/* line 1573, ../sass/screen.scss */
+/* line 1575, ../sass/screen.scss */
 .arrow-chat-margin {
   margin-right: 0;
 }
 @media (min-width: 800px) {
-  /* line 1573, ../sass/screen.scss */
+  /* line 1575, ../sass/screen.scss */
   .arrow-chat-margin {
     margin-right: 10px;
   }
 }
 
-/* line 1579, ../sass/screen.scss */
+/* line 1581, ../sass/screen.scss */
 .controls-margin {
   margin-top: 20px;
 }
 
-/* line 1582, ../sass/screen.scss */
+/* line 1584, ../sass/screen.scss */
 .error-message {
   font-size: 12px;
   position: absolute;
@@ -1655,7 +1657,7 @@ button:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 2px 10px rgba(0, 0, 0, 0.12);
 }
 
-/* line 1592, ../sass/screen.scss */
+/* line 1594, ../sass/screen.scss */
 .container-color-1 {
   background: white;
   background: -moz-linear-gradient(top, white 0%, #a1cca5 100%);
@@ -1667,7 +1669,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#a1cca5', GradientType=0 );
 }
 
-/* line 1602, ../sass/screen.scss */
+/* line 1604, ../sass/screen.scss */
 .container-color-2 {
   background: #f1e767;
   background: -moz-linear-gradient(top, #f1e767 0%, #fbe083 100%);
@@ -1679,7 +1681,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#fbe083', GradientType=0 );
 }
 
-/* line 1612, ../sass/screen.scss */
+/* line 1614, ../sass/screen.scss */
 .container-color-3 {
   background-image: -webkit-linear-gradient(top, #dff0d8 0, #c8e5bc 100%);
   background-image: -o-linear-gradient(top, #dff0d8 0, #c8e5bc 100%);
@@ -1689,7 +1691,7 @@ button:hover {
   background-repeat: repeat-x;
 }
 
-/* line 1620, ../sass/screen.scss */
+/* line 1622, ../sass/screen.scss */
 .container-color-4 {
   background: white;
   background: -moz-linear-gradient(top, white 0%, #f6f6f6 47%, #ededed 100%);
@@ -1701,7 +1703,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
 }
 
-/* line 1630, ../sass/screen.scss */
+/* line 1632, ../sass/screen.scss */
 .container-color-5 {
   background-image: -webkit-linear-gradient(top, #fcf8e3 0, #f8efc0 100%);
   background-image: -o-linear-gradient(top, #fcf8e3 0, #f8efc0 100%);
@@ -1711,7 +1713,7 @@ button:hover {
   background-repeat: repeat-x;
 }
 
-/* line 1638, ../sass/screen.scss */
+/* line 1640, ../sass/screen.scss */
 .container-color-6 {
   background: #93cede;
   background: -moz-linear-gradient(top, #93cede 0%, #75bdd1 41%, #49a5bf 100%);
@@ -1723,7 +1725,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf', GradientType=0 );
 }
 
-/* line 1648, ../sass/screen.scss */
+/* line 1650, ../sass/screen.scss */
 .btn {
   font-family: 'Oswald', sans-serif;
   font-size: 16px;
@@ -1735,13 +1737,13 @@ button:hover {
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 @media (min-width: 800px) {
-  /* line 1648, ../sass/screen.scss */
+  /* line 1650, ../sass/screen.scss */
   .btn {
     width: 100px;
   }
 }
 
-/* line 1661, ../sass/screen.scss */
+/* line 1663, ../sass/screen.scss */
 .btn-default {
   background: #b3dced;
   background: -moz-linear-gradient(top, #b3dced 0%, #29b8e5 50%, #bce0ee 100%);
@@ -1754,20 +1756,20 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', endColorstr='#bce0ee', GradientType=0 );
 }
 
-/* line 1672, ../sass/screen.scss */
+/* line 1674, ../sass/screen.scss */
 .noticia-detalle {
   height: 250px;
   overflow: auto;
   padding: 15px 15px 0 0;
 }
 
-/* line 1677, ../sass/screen.scss */
+/* line 1679, ../sass/screen.scss */
 .container-comentario {
   display: flex;
   flex-direction: column;
 }
 
-/* line 1681, ../sass/screen.scss */
+/* line 1683, ../sass/screen.scss */
 .container-comentarios {
   margin-top: 15px;
 }
